fix my card overlapping with add contact issues

--- a/src/styles/sharedcard.module.scss
+++ b/src/styles/sharedcard.module.scss
@@ -79,7 +79,7 @@ $small: 450px;
 .userCardDiv{
     /* Your styling. */
     position: fixed;
-    z-index: 999999;
+    z-index: 1;
     top:0;
     height: 100vh;
     text-align: center;
